# juce-application-cmake-template

./: AppLaunch.cpp  CMakeLists.txt  MainComponent.cpp  MainComponent.h
shared/: ComponentWindow.h  LambdaComponent.h
